# switchtool

./: .pre-commit-config.yaml  LICENSE.md  pyproject.toml  requirements.txt  switchtool
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
config/: subnets.json
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/upcoming_release_notes/: 10-mnt_more_debug.rst  11-fix_forgiving_prompts.rst  8-ref_sdfconfig.rst  9-vlan_index_error.rst
psnet/EpicsQT/: qlogdisplay.py
psnet/netconfig/: __init__.py  host.py  netconfig.py  parsing.py
psnet/survey/: command.py  settings.py  survey.py  utils.py
psnet/switch/: __init__.py  switch.py
psnet/ui/: __init__.py
psnet/ui/dialogs/: __init__.py  configdialog.py  finddialog.py  movedialog.py  passwddialog.py
psnet/ui/widgets/: __init__.py  switch.py  vlan.py
scripts/: switch_gui.py  switchtool
switchtool/: sdfconfig.py
switchtool/EpicsQT/: qlogdisplay.py
switchtool/netconfig/: __init__.py  host.py  parsing.py
switchtool/survey/: command.py  survey.py  utils.py
switchtool/switch/: __init__.py  switch.py
switchtool/ui/: __init__.py
switchtool/ui/dialogs/: configdialog.py  finddialog.py  passwddialog.py
switchtool/ui/widgets/: __init__.py  switch.py  vlan.py
