[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Programming Language :: Python :: 3",]
description = "Interact with and program switches over python"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "switchtool"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE.md"

[project.gui-scripts]
switchtool-gui = "scripts.switch_gui:main"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "psnet*", ]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]
